fix: use Set.of